[tool.poetry]
name = "graphene-django-plus"
version = "2.4.0"
description = "Tools to easily create permissioned CRUD endpoints in graphene."
authors = ["Thiago Bellini Ribeiro <thiago@bellini.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/0soft/graphene-django-plus"
repository = "https://github.com/0soft/graphene-django-plus"
documentation = "https://graphene-django-plus.readthedocs.io"
keywords = ["graphene", "django", "graphql", "crud", "permissions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
]
packages = [{include = "graphene_django_plus"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-django = "^4.2.0"
mock = "^4.0.3"
codecov = "^2.1.11"
django-filter = "^2.4.0"
django-guardian = "^2.3.0"
graphene-django-optimizer = "^0.8.0"
graphene-django = "^2.15.0"
graphene = "^2.1.8"
graphql-core = "~2"
black = "^20.8b1"
flake8 = "^3.9.1"
pynvim = "^0.4.3"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
exclude = """
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests/test_*.py"
django_find_projects = false
addopts = "--cov -vv"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{36,37,38,39}-django{22,30,31,32,main},
    black,flake8

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[gh-actions:env]
DJANGO =
    2.2: django22
    3.0: django30
    3.1: django31
    3.2: django32
    main: djangomain

[testenv]
passenv = *
usedevelop = True
setenv =
    DJANGO_SETTINGS_MODULE=tests.settings
deps =
    -e.[test]
    psycopg2-binary
    django20: Django>=2.0,<2.1
    django21: Django>=2.1,<2.2
    django22: Django>=2.2,<3.0
    django30: Django>=3.0a1,<3.1
    django31: Django>=3.1,<3.2
    django32: Django>=3.2a1,<3.3
    djangomain: https://github.com/django/django/archive/main.zip
commands = {posargs:py.test --cov=graphene_django_plus tests}

[testenv:black]
basepython = python3.9
deps = -e.[dev]
commands  =
    black --exclude "/migrations/" graphene_django_plus tests setup.py --check

[testenv:flake8]
basepython = python3.9
deps = -e.[dev]
commands =
    flake8 graphene_django_plus tests setup.py
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
