[tool.poetry]
name = "graphene-django-plus"
version = "5.0"
description = "Tools to easily create permissioned CRUD endpoints in graphene."
authors = ["Thiago Bellini Ribeiro <thiago@bellini.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/0soft/graphene-django-plus"
repository = "https://github.com/0soft/graphene-django-plus"
documentation = "https://graphene-django-plus.readthedocs.io"
keywords = ["graphene", "django", "graphql", "crud", "permissions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
]
packages = [{ include = "graphene_django_plus" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
codecov = "^2.1.11"
django = "^4.1.7"
django-filter = "^22.1"
django-guardian = "^2.3.0"
django-types = "^0.17.0"
flake8 = "^4.0.1"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-polyfill = "^1.0.2"
flake8-return = "^1.1.3"
flake8-simplify = "^0.19.2"
graphene = "^3.2.1"
graphene-django = "^3.0.0"
graphene-django-optimizer = { git = "https://github.com/bellini666/graphene-django-optimizer.git" }
mock = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
pytest-django = "^4.2.0"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
sphinx = "^4"
sphinx-rtd-theme = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py38', 'py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 38
multi_line_output = 3
force_sort_within_sections = true

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "Linux"
useLibraryCodeForTypes = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryCast = "warning"
reportCallInDefaultInitializer = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportUntypedNamedTuple = "error"
reportMissingSuperCall = "warning"
strictListInference = "error"
strictDictionaryInference = "error"
strictSetInference = "error"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests/test_*.py"
addopts = "-p no:warnings --nomigrations --cov=./ --cov-report term-missing:skip-covered"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
